fixed header on small screens

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,7 +10,7 @@
 
 body {
     background-color:#dfdfdf;
-    font-family: "Open Sans";
+    font-family: "Open Sans", serif;
 }
 
 #app {
@@ -37,7 +37,8 @@ a {
 
 input[type=text].fulltext-search__input {
 
-    width: 190px;
+    width: 100%;
+    min-width: 100px;
     height: 35px;
     border-radius: 4px;
     border: 1px solid #cfcece;
@@ -75,15 +76,11 @@ footer {
 .footer__heading {
     text-transform: uppercase;
     font-weight: 700;
-    line-height: 25px;
-    line-height: 2.5rem;
     color: #545454;
     font-size: 13px;
 }
 
 .footer__column {
-    font-size: 13px;
-    font-size: 1.3rem;
     font-weight: 400;
     padding-top: 30px;
     text-align:left;
@@ -131,7 +128,7 @@ footer {
 }
 
 .title-white {
-    font-family: "Open Sans";
+    font-family: "Open Sans", serif;
     font-size: 35pt;
     color:white;
     font-weight: 50;
